# cerf

./: .gitignore  Cargo.toml  INSTALLATION.md  INSTALLTION.md  README.md  p.toml  release.toml
.github/workflows/: ci.yml  publish.yml
src/: engine.rs  main.rs  parser.rs  prompt.rs  signals.rs
src/builtins/: alias.rs  bg.rs  boolean.rs  builtin_cmd.rs  cd.rs  command_cmd.rs  declare.rs  dirs.rs  echo.rs  eval.rs  export.rs  fg.rs  fs_cmd.rs  help.rs  history.rs  jobs.rs  kill_cmd.rs  local.rs  mapfile.rs  mod.rs  printf.rs  read.rs  registry.rs  set.rs  shift.rs  source.rs  system.rs  test_cmd.rs  tether.rs  type_cmd.rs  ulimit.rs  umask.rs  unalias.rs  unset.rs  wait.rs
src/builtins/fs/: cat.rs  cp.rs  df.rs  du.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  pager.rs  rm.rs  stat.rs  touch.rs  utils.rs
src/builtins/fs/ls/: display.rs  mod.rs  os.rs  parser.rs
src/engine/: alias.rs  execution.rs  glob.rs  job_control.rs  mod.rs  path.rs  redirect.rs  state.rs
src/parser/: ast.rs  combinators.rs  expand.rs  mod.rs
