[package]
name = "cerf"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
glob = "0.3"
nom = "8.0.0"
rustyline = "17.0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["signal", "process", "term"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_System_Threading", "Win32_System_IO", "Win32_System_Diagnostics_ToolHelp", "Win32_Security", "Win32_System_SystemServices"] }
