[package]
name = "cerf"
authors = ["CerfSh"]
version = "0.1.1"
description = "A shell."
edition = "2024"
repository = "https://github.com/cerfsh/cerf"
homepage = "https://github.com/cerfsh/cerf"
license = "Apache-2.0"
keywords = [
    "cerf",
    "shell",
    "codetease",
    "terminal",
    "command-line",
]
categories = ["command-line-utilities"]
rust-version = "1.93.1"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
dirs = "6.0.0"
glob = "0.3"
nom = "8.0.0"
rustyline = "17.0.2"
sysinfo = "0.33.1"
jwalk = "0.8.1"
chrono = "0.4.39"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["signal", "process", "term"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_SystemServices",
] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
